Create a recipes list and recipe show pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,9 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class='container p-4'>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= render 'shared/flashes' %>
     
     <%= yield %>
   </body>
