Style login,signup and navbar components

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+<nav class="navbar navbar-expand-lg navbar-light p-3 mb-3" style="background-color: #e3f2fd;">
   <%= link_to 'Recipe App', root_path, class: 'navbar-brand' %>
   
   <div class="w-full d-flex justify-content-between px-4" id="navbarSupportedContent">
@@ -6,7 +6,7 @@
       <% if user_signed_in? %>
           <li><%= link_to 'Recipes', recipes_path, class: 'nav-link' %></li>
           <li><%= link_to 'New Recipe', new_recipe_path, class: 'nav-link' %></li>
-          <%# <li><%= link_to 'Profile', user_path(current_user), class: 'nav-link' %></li> %>
+          <%# <li><%= link_to 'Profile', user_path(current_user), class: 'nav-link' %></li>
           <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
         <%else%>
           <li><%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %></li>
