--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -4,7 +4,7 @@
   <div class="col-sm-8 border border-2 m-auto p-4 my-3 row"> 
     <div class="col-4  border-end border-2"> 
       <h3 class="my-3 pb-2"> <%= recipe.name %> </h3>
-      <p> By: <%= recipe.user.email %> </p>
+      <p> By: <%= recipe.user.name %> </p>
     </div>
 
     <div class="col d-flex align-items-center px-4">
