Impelement adding new ingredient view

--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -2,7 +2,7 @@
 <h1 class='text-center'>New Ingredient</h1>
 
 <div class="w-50">
-<%= form_with model: @recipe_food, url: recipes_url,method: :'post' do |form| %>
+<%= form_with model: @recipe_food, url: recipe_recipe_foods_path(recipe_id:params[:recipe_id]),method: :'post' do |form| %>
   <div class="col-md-12">
     <% if @recipe_food.errors.any? %>
       <div style="color: red">
@@ -15,21 +15,29 @@
         </ul>
       </div>
     <% end %>
-   <%= @foods.each do |food|%>
-    <div class="mb-3">
-      <%=form.label :@food.name,class: "form-label"%>
-      <%=form.check_box :food%>
-      <%=form.number_field :@recipe_food.quantity%>
-    </div>
-  <%end%>
+    <ul class="list-group">
+      <% @foods.each do |f|%>
+          <li class="list-group-item d-flex justify-content-between align-items-center"><%= f.name %><span class="text-secondary badge-pill">Id-<%= f.id %></span></li>
+      <%end%>     
+   </ul>
+  
+  <div class='my-2 text-secondary'>
+    <%= form.label :food_id, 'Food',class:'text-secondary mx-1' %>
+    <%= form.select :food_id ,@foods.map { |f| [f.name, f.id] }%>
+    <%= form.label :quantity, 'Quantity' ,class:'text-secondary mx-1'%>
+    <%= form.number_field :quantity %>
+  </div>
+
+  <div class='mt-2'>
+    <%= form.submit 'Add Ingredient',class: "btn btn-secondary"%>
+  </div>
+
 
 
 
     
      
-    <div>
-      <%= form.submit 'Save',class: "btn btn-secondary"%>
-    </div>
+   
   </div>
 
   <div class='mb-3'>
@@ -39,3 +47,4 @@
 </div>
 
 </div>
+
