--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,9 +1,9 @@
-<div id="<%= dom_id(recipe_data) %>" class='d-flex flex-row justify-content-between p-4 w-50 border border-secondary rounded-3 align-items-center mb-1'>
-  <div class='d-flex flex-column gap-3'>
+<div id="<%= dom_id(recipe_data) %>" class='col-sm-8  row p-4 m-auto border border-secondary rounded-3 align-items-center mb-1'>
+  <div class='col-4 d-flex flex-column gap-3 border-end border-2 align-items-center'>
     <h2 class="text-center text-capitalize"><%=recipe_data.name%></h2>
     <%= button_to 'Remove',recipe_destroy_path(id:recipe_data.id),method: :delete ,class:'btn btn-danger'%>
   </div>
 
 
-  <p><%= recipe_data.description %></p>
+  <p class='col-6'><%= recipe_data.description %></p>
 </div>
