--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,12 +1,19 @@
-<h1>Recipes</h1>
+<h1 class='text-center'>Recipes</h1>
 
-<div id="recipes">
+<div id="recipes" class='d-flex flex-column'>
   <% @recipes.each do |recipe| %>
-    <%= render partial:'recipe',locals:{recipe_data:recipe} %>
-    <p>
-      <%= link_to "Show this recipe", recipe_url(id:recipe.id) ,method: :get%>
-    </p>
+  <div class='mb-3'>
+  <%= render partial:'recipe',locals:{recipe_data:recipe} %>
+
+      
+ <div class='mt-2 px-5'>
+    <%= link_to "Show this recipe", recipe_url(id:recipe.id) ,method: :get,style:'margin-left:9rem;',class:'btn btn-success p-1'%>
+    <%= link_to "New recipe", new_recipe_path ,class:'btn btn-success p-1 '%>
+  </div>
+  </div>
+    
   <% end %>
+  
 </div>
 
-<%= link_to "New recipe", new_recipe_path %>
+
