--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -32,7 +32,7 @@
   
   
   <div class='d-flex flex-row justify-content-between'>
-    <%= button_to 'Generate shoping list',recipe_destroy_path(id:@recipe.id),class:"btn btn-secondary"%>
+    <%= link_to 'Generate shoping list',recipe_shopping_list_path(id:@recipe.id),method: :get,class:"btn btn-secondary"%>
     <%= link_to 'Add Ingredient',new_recipe_recipe_food_path(recipe_id:@recipe.id),method: :get,class:"btn btn-secondary"%>
   </div>
 
@@ -40,7 +40,7 @@
     <tr class="table-secondary">
       <th class="table-secondary">Food</th>
       <th class="table-secondary">Quantity</th>
-      <th class="table-secondary">Value</th>
+      <th class="table-secondary">Price (per piece)</th>
       <th class="table-secondary text-center">Actions</th>
     </tr>
   <tbody>
