Add authorization and user profile page

--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,7 +1,9 @@
 <div id="<%= dom_id(recipe_data) %>" class='col-sm-8  row p-4 m-auto border border-secondary rounded-3 align-items-center mb-1'>
   <div class='col-4 d-flex flex-column gap-3 border-end border-2 align-items-center'>
     <h2 class="text-center text-capitalize"><%=recipe_data.name%></h2>
-    <%= button_to 'Remove',recipe_destroy_path(id:recipe_data.id),method: :delete ,class:'btn btn-danger'%>
+    <%if can? :manage,recipe_data%>
+      <%= button_to 'Remove',recipe_destroy_path(id:recipe_data.id),method: :delete ,class:'btn btn-danger'%>
+    <%end%>
   </div>
 
 
