--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class='text-center'>Recipes</h1>
+<h1 class='text-center text-success mb-3'>Recipes</h1>
 
 <div id="recipes" class='d-flex flex-column'>
   <% @recipes.each do |recipe| %>
