--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,7 +6,9 @@
       <% if user_signed_in? %>
           <li><%= link_to 'Recipes', recipes_path, class: 'nav-link' %></li>
           <li><%= link_to 'New Recipe', new_recipe_path, class: 'nav-link' %></li>
-          <%# <li><%= link_to 'Profile', user_path(current_user), class: 'nav-link' %></li>
+          <li><%= link_to 'Add Food',new_food_path,class:'nav-link'%></li>
+          <li><%= link_to 'Foods',foods_path,class:'nav-link'%></li>
+          <li><%= link_to 'Profile', user_profile_path, class: 'nav-link'%></li>
           <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
         <%else%>
           <li><%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %></li>
