Fix merge conflict

--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <h1 class="text-center">Public recipes</h1>
   <% @public_recipes.each do |recipe| %>
-  <div class="col-sm-8 border border-2 m-auto p-4 my-3 row"> 
-    <div class="col-4  border-end border-2"> 
-      <h3 class="my-3 pb-2"> <%= recipe.name %> </h3>
+  <div class="col-sm-8 border border-2 m-auto p-4 my-3 row shadow-lg rounded"> 
+    <div class="col-4  border-end border-2 border-3 border-primary"> 
+      <h3 class="h2 my-3 pb-2 text-capitalize font-weight-bolder"> <%= recipe.name %> </h3>
       <p> By: <%= recipe.user.name %> </p>
     </div>
 
-    <div class="col d-flex align-items-center px-4">
+    <div class="h5 col d-flex align-items-center px-4 text-4">
       <p><%= recipe.description %></p>
     </div>  
  </div>
