--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light p-3 mb-3" style="background-color: #e3f2fd;">
-  <%= link_to 'Recipe App', root_path, class: 'navbar-brand' %>
+<nav class="navbar navbar-expand-lg p-3 mb-3" style="background-color: #244d4c;">
+  <%= link_to 'Recipe App', root_path, class: 'navbar-brand text-white' %>
   
   <div class="w-full d-flex justify-content-between px-4" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto ">
       <% if user_signed_in? %>
           <li><%= link_to 'Recipes', recipes_path, class: 'nav-link' %></li>
           <li><%= link_to 'New Recipe', new_recipe_path, class: 'nav-link' %></li>
@@ -11,8 +11,8 @@
           <li><%= link_to 'Profile', user_profile_path, class: 'nav-link'%></li>
           <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
         <%else%>
-          <li><%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %></li>
-          <li><%= link_to 'Login', new_user_session_path, class: 'nav-link' %></li>
+          <li><%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link text-white' %></li>
+          <li><%= link_to 'Login', new_user_session_path, class: 'nav-link text-white' %></li>
       <%end%>    
    </ul>
   </div>
