--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class='container pt-2'>
+  <body class='container pt-2' style="background-color:#ebf2f1;">
     <%= render 'shared/flashes' %>
     <%= render 'layouts/navbar' %>
     <%= yield %>
