--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,15 +4,15 @@
   <div class="w-full d-flex justify-content-between px-4" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto ">
       <% if user_signed_in? %>
-          <li><%= link_to 'Recipes', recipes_path, class: 'nav-link' %></li>
-          <li><%= link_to 'New Recipe', new_recipe_path, class: 'nav-link' %></li>
-          <li><%= link_to 'Add Food',new_food_path,class:'nav-link'%></li>
-          <li><%= link_to 'Foods',foods_path,class:'nav-link'%></li>
-          <li><%= link_to 'Profile', user_profile_path, class: 'nav-link'%></li>
-          <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
+          <li><%= link_to 'Recipes', recipes_path, class: 'text-white nav-link' %></li>
+          <li><%= link_to 'New Recipe', new_recipe_path, class: 'text-white nav-link' %></li>
+          <li><%= link_to 'Add Food',new_food_path,class:'text-white nav-link'%></li>
+          <li><%= link_to 'Foods',foods_path,class:'text-white nav-link'%></li>
+          <li><%= link_to 'Profile', user_profile_path, class: 'text-white nav-link'%></li>
+          <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'text-white nav-link' %></li>
         <%else%>
           <li><%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link text-white' %></li>
-          <li><%= link_to 'Login', new_user_session_path, class: 'nav-link text-white' %></li>
+          <li><%= link_to 'Login', new_user_session_path, class: 'text-white nav-link text-white' %></li>
       <%end%>    
    </ul>
   </div>
